# handy_stuff

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
examples/: example_handle_array.c
include/handy/: handy.h  handy_arena.h  handy_assert.h  handy_bits.h  handy_checked.h  handy_config.h  handy_contract.h  handy_log.h  handy_mem.h  handy_option.h  handy_safety.h  handy_static.h  handy_str.h  handy_strbuilder.h  handy_time.h  handy_version.h
src/: handy_log.c
tests/: handy_test.h  test_basics.c
tools/: README.md  amalgamate.py  generate_compile_commands.py  generate_container_header.py  generate_handle_array_header.example.json  generate_handle_array_header.py
